update crawl data - optimize performance crawl